# ARC

./: CMakeLists.txt
examples/: CMakeLists.txt  arc_pressio_example.c
include/: arc.h  galois.h  jerasure.h  reed_sol.h
src/: arc.c
test/: CMakeLists.txt
